--- a/index.css
+++ b/index.css
@@ -10,12 +10,12 @@
 }
 .top__main>.top__flexbox:nth-child(even) {
     background: white;
-    border: 1px solid grey;
+    box-shadow: 1px 1px 1px 1px #888888;
 }
 
 .top__main>.top__flexbox:nth-child(odd) {
     background: white;
-    border: 1px solid grey;
+    box-shadow: 1px 1px 1px 1px #888888;
 }
 .fa.fa-users {
     font-size:36px;
@@ -32,4 +32,16 @@
     padding: 10px;
     background-color: lightgrey;
     margin: 20px 0 20px 10px;
+}
+.flexbox__titles {
+    text-align: center;
+}
+.flexbox__paragraph {
+    color: grey;
+    text-align: center;
+}
+.highlighted {
+    font-size: 25px;
+    font-weight: bold;
+    color: black;
 }
