--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 .page__body {
-  background-color: #ebe9e9; }
+  background-color: #ebe9e9;
+  padding: 0px;
+  margin: 0px; }
   .page__body .page__header {
     display: flex;
     background-color: white;
@@ -9,46 +11,76 @@
     .page__body .page__header .page__logo {
       width: 20%;
       text-align: center;
-      padding-left: 100px; }
+      padding-left: 20px; }
+      .page__body .page__header .page__logo .header__logo {
+        font-weight: normal;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
     .page__body .page__header .header__search {
       margin-left: 70px;
-      width: 800px;
-      height: 40px; }
+      height: 40px;
+      display: flex;
+      justify-content: center; }
       .page__body .page__header .header__search .search__button {
         height: 38px;
         width: 50px;
         border: none;
-        position: absolute;
         background-color: #ebe9e9;
         outline: none;
-        border-radius: 15px 0px 0px 15px; }
+        border-radius: 5px 0px 0px 5px; }
         .page__body .page__header .header__search .search__button .search__img {
-          height: 10px; }
+          height: 12px; }
       .page__body .page__header .header__search .header__search-bar {
         height: 90%;
-        width: 400px;
+        width: 610px;
         background-color: #ebe9e9;
         border: none;
-        border-radius: 5px 0px 0px 5px;
-        padding-left: 60px;
-        outline: none; }
-      .page__body .page__header .header__search .search__filter {
+        padding-left: 10px;
         outline: none;
-        height: 38px;
-        width: 130px;
-        background-color: #5c96ee;
-        position: absolute;
-        border: none;
-        border-radius: 0px 5px 5px 0px; }
-    .page__body .page__header .header__profile-icon {
-      height: 30px;
-      border-radius: 50%; }
-    .page__body .page__header .header__profile-name {
-      margin-left: 15px;
-      color: gray; }
-    .page__body .page__header .header__add {
-      margin-left: 20px;
-      height: 20px;
-      color: gray; }
+        font-size: 13px; }
+      .page__body .page__header .header__search .header__dropdown {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        height: 30px;
+        width: 140px;
+        padding-top: 8px;
+        color: white;
+        border-radius: 0px 5px 5px 0px;
+        background-color: #00a2ff; }
+        .page__body .page__header .header__search .header__dropdown .dropdown__text {
+          cursor: default;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+        .page__body .page__header .header__search .header__dropdown .dropdown__image {
+          margin-left: 10px;
+          height: 15px;
+          padding-top: 4px; }
+      .page__body .page__header .header__search .header__dropdown-content {
+        display: none;
+        background-color: rgba(0, 162, 255, 0.664);
+        text-align: center;
+        width: 140px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.39);
+        margin-top: 10px;
+        border-radius: 5px 5px 5px 5px; }
+      .page__body .page__header .header__search .header__dropdown:hover .header__dropdown-content {
+        display: block; }
+    .page__body .page__header .header__profile {
+      margin-left: 190px;
+      display: flex;
+      align-items: center;
+      flex-wrap: nowrap; }
+      .page__body .page__header .header__profile .header__profile-icon {
+        height: 40px;
+        border-radius: 50%; }
+      .page__body .page__header .header__profile .header__profile-name {
+        margin-left: 17px;
+        color: rgba(128, 128, 128, 0.61);
+        width: 90px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+      .page__body .page__header .header__profile .header__add {
+        margin-left: 10px;
+        height: 20px;
+        color: gray;
+        cursor: pointer; }
 
 /*# sourceMappingURL=index.css.map */
