--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,8 @@
 .page__body{
     background-color: rgb(235, 233, 233);
+    padding: 0px;
+    margin: 0px;
+
     .page__header{
         display: flex;
         background-color: white;
@@ -10,63 +13,105 @@
         .page__logo{
             width: 20%;
             text-align: center;
-            padding-left: 100px;
+            padding-left: 20px;
+
+            .header__logo{
+                font-weight: normal;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+            }
+            
         }
 
         .header__search{
             margin-left: 70px;
-            width: 800px;
             height: 40px;
+            display: flex;
+            justify-content: center;
 
             .search__button{
                 height: 38px;
                 width: 50px;
                 border: none;
-                position: absolute;
                 background-color: rgb(235, 233, 233);
                 outline: none;
-                border-radius: 15px 0px 0px 15px;
+                border-radius: 5px 0px 0px 5px;
                 
                 .search__img{
-                    height: 10px;
+                    height: 12px;
                 }
             }
             
             .header__search-bar{
                 height: 90%;
-                width: 400px;
+                width: 610px;
                 background-color: rgb(235, 233, 233);
                 border: none;
-                border-radius: 5px 0px 0px 5px;
-                padding-left: 60px;
+                padding-left: 10px;
                 outline: none;
+                font-size: 13px;
+            }
+
+            .header__dropdown{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                height: 30px;
+                width: 140px;
+                padding-top: 8px;
+                color: white;
+                border-radius: 0px 5px 5px 0px;
+                background-color: rgb(0, 162, 255);
+                
+                .dropdown__text{
+                    cursor: default;
+                    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                }
+
+                .dropdown__image{
+                    margin-left: 10px;
+                    height: 15px;
+                    padding-top: 4px;
+                }
+            }
+            .header__dropdown-content {
+                display: none;
+                background-color: rgba(0, 162, 255, 0.664);
+                text-align: center;
+                width: 140px;
+                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.39);
+                margin-top: 10px;
+                border-radius: 5px 5px 5px 5px;
             }
             
-            .search__filter{
-                outline: none;
-                height: 38px;
-                width: 130px;
-                background-color: rgb(92, 150, 238);
-                position: absolute;
-                border: none;
-                border-radius: 0px 5px 5px 0px;
+            .header__dropdown:hover .header__dropdown-content {
+                display: block;
             }
         }
 
+        .header__profile{
+            margin-left: 190px;
+            display: flex;
+            align-items: center;
+            flex-wrap: nowrap;
+
             .header__profile-icon{
-                height: 30px;
+                height: 40px;
                 border-radius: 50%;
             }
             .header__profile-name{
-                margin-left: 15px;
-                color: gray;
+                margin-left: 17px;
+                color: rgba(128, 128, 128, 0.61);
+                width: 90px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             }
 
             .header__add{
-                margin-left: 20px;
+                margin-left: 10px;
                 height: 20px;
                 color: gray;
+                cursor: pointer;
             }
         }
+    }
     
 }
