--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
 .page__body {
   background-color: #ebe9e9;
   padding: 0px;
-  margin: 0px; }
+  margin: 0px;
+  /*Nav-bar Links*/
+  /*icon styles*/ }
   .page__body .page__header {
     display: flex;
     background-color: white;
@@ -82,5 +84,82 @@
         height: 20px;
         color: gray;
         cursor: pointer; }
+  .page__body .grid-container {
+    box-shadow: 0px 0px 3px 0px #e0e0e0;
+    display: grid;
+    grid-row: 1/9;
+    grid-row-gap: 10px;
+    background-color: white;
+    width: 17%;
+    margin-top: 9%;
+    margin-left: 2%;
+    padding-bottom: 4%; }
+  .page__body .grid-bookmark {
+    width: 5%;
+    position: absolute;
+    margin-left: 14%;
+    color: #2aa42a;
+    margin-top: -0.1%; }
+  .page__body .grid-admin {
+    padding-bottom: 7%; }
+  .page__body .grid-admin--png {
+    width: 13%;
+    border-radius: 12%;
+    margin-top: 7%;
+    margin-left: 8%;
+    float: left; }
+  .page__body .grid-admin--text {
+    margin-top: 9%;
+    margin-left: 27%;
+    line-height: 0.3em; }
+  .page__body .grid-admin--welcome {
+    color: #656565; }
+  .page__body .grid-admin--rank {
+    font-size: 11px;
+    color: #b2b2b2; }
+  .page__body .grid-nav {
+    padding-top: 3.2%;
+    padding-bottom: 1%; }
+  .page__body .grid-nav:hover {
+    background-color: #e6f2ff;
+    border-left: 1.5px solid #3399ff;
+    color: #3399ff; }
+  .page__body .grid-nav--icon:hover {
+    color: #3399ff; }
+  .page__body .grid-nav--icon {
+    margin-left: 20%;
+    color: grey;
+    width: 81%;
+    float: left;
+    font-size: 17px;
+    padding-top: 1%; }
+  .page__body .grid-nav--title {
+    line-height: 0.1em;
+    margin-top: -5.8%;
+    margin-left: 15%; }
+  .page__body .grid-nav--logout {
+    padding-top: 3.2%;
+    padding-bottom: 1%;
+    margin-top: 20%; }
+  .page__body .grid-nav--logout:hover {
+    background-color: #e6f2ff;
+    border-left: 1.5px solid #3399ff;
+    color: #3399ff; }
+  .page__body .fas.fa-th-large {
+    font-size: 13px; }
+  .page__body .far.fa-credit-card {
+    font-size: 13px; }
+  .page__body .fas.fa-bookmark {
+    font-size: 13px; }
+  .page__body .fas.fa-users {
+    font-size: 13px; }
+  .page__body .fas.fa-ticket-alt {
+    font-size: 13px; }
+  .page__body .fas.fa-comments {
+    font-size: 13px; }
+  .page__body .fas.fa-user {
+    font-size: 13px; }
+  .page__body .fas.fa-power-off {
+    font-size: 13px; }
 
 /*# sourceMappingURL=index.css.map */
