trying to fix grunt and delete .idea

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -22,8 +22,8 @@ aside{
 .notification_time{
   text-align: right;
 }
-.notification_text{
-}
+//.notification_text{
+//}
 .notification_buttons{
   display: flex;
   flex-direction: row;
