got grunt working

--- a/css/Index.css
+++ b/css/Index.css
@@ -1,94 +1,86 @@
-aside{
-    position:fixed;
-    bottom:0;
-    right:0;
-}
-.notification_bar{
-    height: 600px;
-    width: 250px;
-    display: flex;
-    background-color: white;
-    border-radius: 1px;
-    -webkit-box-shadow: -41px 3px 175px -19px rgba(0,0,0,0.2);
-    -moz-box-shadow: -41px 3px 175px -19px rgba(0,0,0,0.2);
-    box-shadow: -41px 3px 175px -19px rgba(0,0,0,0.2);
-    flex-direction: column;
+aside {
+  position: fixed;
+  bottom: 0;
+  right: 0; }
 
-}
-.message{
-    border-bottom: 1px solid lightgrey;
-    padding:6px 22px;
-}
-.notification_time{
-    text-align: right;
-}
-.notification_text{
-}
-.notification_buttons{
-    display: flex;
-    flex-direction: row;
-}
-.refresh{
-    width: 50%;
-}
-.close{
-    width: 50%;
-}
-ul{
-    list-style-type: none;
-}
+.notification_bar {
+  height: 600px;
+  width: 250px;
+  display: flex;
+  background-color: white;
+  border-radius: 1px;
+  -webkit-box-shadow: -41px 3px 175px -19px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: -41px 3px 175px -19px rgba(0, 0, 0, 0.2);
+  box-shadow: -41px 3px 175px -19px rgba(0, 0, 0, 0.2);
+  flex-direction: column; }
+
+.message {
+  border-bottom: 1px solid lightgrey;
+  padding: 6px 22px; }
+
+.notification_time {
+  text-align: right; }
+
+.notification_buttons {
+  display: flex;
+  flex-direction: row; }
+
+.refresh {
+  width: 50%; }
+
+.close {
+  width: 50%; }
+
+ul {
+  list-style-type: none; }
+
 .switch {
-     position: relative;
-     display: inline-block;
-     width: 30px;
-     height: 17px;
- }
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px; }
 
-.switch input {display:none;}
+.switch input {
+  display: none; }
 
 .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s; }
 
 .slider:before {
-    position: absolute;
-    content: "";
-    height: 13px;
-    width: 13px;
-    left: 2px;
-    bottom: 2px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s; }
 
 input:checked + .slider {
-    background-color: #2196F3;
-}
+  background-color: #2196F3; }
 
 input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-}
+  box-shadow: 0 0 1px #2196F3; }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(13px);
-    -ms-transform: translateX(13px);
-    transform: translateX(13px);
-}
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px); }
 
 /* Rounded sliders */
 .slider.round {
-    border-radius: 34px;
-}
+  border-radius: 34px; }
 
 .slider.round:before {
-    border-radius: 50%;
-}
+  border-radius: 50%; }
+
+/*# sourceMappingURL=index.css.map */
