--- a/css/index.scss
+++ b/css/index.scss
@@ -40,6 +40,7 @@ html {
 
   .message__profile {
     border-radius: 100%;
+    position: relative;
     width: 60px;
     height: 60px;
     margin: 10px;
@@ -52,7 +53,7 @@ html {
   align-items: center;
   padding-top: 14px;
   @include message-borders;
-  }
+}
 
 .message__status {
   padding-bottom: $body-padding;
@@ -76,12 +77,13 @@ html {
 
 .message__members-going {
   border-radius: 100%;
-  height: 25px;
-  width: 25px;
+  position: relative;
+  width: 20px;
+  height: 20px;
   // border: 8px solid white;
   //position:relative;
   //left: 45px;
-  }
+}
 .message__images {
   padding-bottom: $body-padding;
 }
@@ -89,12 +91,12 @@ html {
   display: flex;
   padding: 18px 0px 18px 0;
   a {
-     text-decoration: none;
-     display: block;
-     font-size: $message-font;
-     color: $message-color;
-     margin: auto;
-   }
+    text-decoration: none;
+    display: block;
+    font-size: $message-font;
+    color: $message-color;
+    margin: auto;
+  }
 
   &:hover {
     background-color: #2290FF;
