--- a/css/Index.css
+++ b/css/Index.css
@@ -1,10 +1,12 @@
+/*the position of the notification-bar-section*/
 aside {
   position: fixed;
   bottom: 0;
   right: 0; }
 
+/*the outline of the bar itself and the layer of the bar*/
 .notification_bar {
-  height: 600px;
+  height: 87vh;
   width: 250px;
   display: flex;
   background-color: white;
@@ -12,24 +14,101 @@ aside {
   -webkit-box-shadow: -41px 3px 175px -19px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: -41px 3px 175px -19px rgba(0, 0, 0, 0.2);
   box-shadow: -41px 3px 175px -19px rgba(0, 0, 0, 0.2);
-  flex-direction: column; }
+  flex-direction: column;
+  z-index: 2; }
 
+/*this is the style for every message block*/
 .message {
   border-bottom: 1px solid lightgrey;
-  padding: 6px 22px; }
+  padding: 4px 20px; }
 
+/*this is the styling for the profile picture in a message*/
+.message_pf {
+  border-radius: 100%; }
+
+/*this is the little timestamp you see in the upperright corner in a message*/
 .notification_time {
-  text-align: right; }
+  text-align: right;
+  font-size: 10px;
+  color: #979797;
+  font-weight: bold; }
+
+/* Customize the label (the container) */
+.container_checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none; }
+
+/* Hide the browser's default checkbox */
+.container_checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer; }
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #eee; }
+
+/* On mouse-over, add a grey background color */
+.container_checkbox:hover input ~ .checkmark {
+  background-color: #ccc; }
+
+/* When the checkbox is checked, add a blue background */
+.container_checkbox input:checked ~ .checkmark {
+  background-color: #2196F3; }
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+/* Show the checkmark when checked */
+.container_checkbox input:checked ~ .checkmark:after {
+  display: block; }
+
+/* Style the checkmark/indicator */
+.container_checkbox .checkmark:after {
+  left: 3px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
 
 .notification_buttons {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  border-bottom: 1px solid lightgray; }
 
 .refresh {
-  width: 50%; }
+  background-color: white;
+  width: 50%;
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px; }
 
 .close {
-  width: 50%; }
+  background-color: white;
+  width: 50%;
+  border-left: 1px solid lightgray;
+  border-top: none;
+  border-bottom: none;
+  border-right: none; }
 
 ul {
   list-style-type: none; }
@@ -52,7 +131,8 @@ ul {
   bottom: 0;
   background-color: #ccc;
   -webkit-transition: .4s;
-  transition: .4s; }
+  transition: .4s;
+  float: left; }
 
 .slider:before {
   position: absolute;
@@ -64,6 +144,10 @@ ul {
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s; }
+
+.slider_text {
+  padding-left: 40px;
+  display: inline; }
 
 input:checked + .slider {
   background-color: #2196F3; }
@@ -82,5 +166,8 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%; }
+
+.slider_text {
+  color: #2196F3; }
 
 /*# sourceMappingURL=index.css.map */
