--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,6 @@
 
 $text-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+$blue: rgb(0, 162, 255);
 
 .page__body{
 	background-color: rgb(245, 244, 244);
@@ -67,7 +68,7 @@ $text-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 				padding-top: 8px;
 				color: white;
 				border-radius: 0px 5px 5px 0px;
-				background-color: rgb(0, 162, 255);
+				background-color: $blue;
 
 				.dropdown__text{
 					cursor: default;
@@ -193,9 +194,9 @@ $text-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 		&:hover{
 			background-color: #e6f2ff;
 			border-left: 1.5px solid #3399ff;
-			color: #3399ff;
+			color: $blue;
 			& .grid-nav--icon{
-				color: #3399ff;
+				color: $blue;
 			}
 		}
 
@@ -221,8 +222,8 @@ $text-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	}
 	.grid-nav--logout:hover{
 		background-color: #e6f2ff;
-		border-left: 1.5px solid #3399ff;
-		color: #3399ff;
+		border-left: 1.5px solid $blue;
+		color: $blue;
 	}
 
 	/*icon styles*/
