--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,18 @@
 html {
   background-color: #FAFAFA; }
 
+.message__title {
+  margin-left: 350px;
+  margin-top: 280px; }
+
 .message__container {
   background: transparent;
   display: grid;
-  width: 70%;
+  width: 69%;
   grid-template-columns: auto auto auto auto;
   grid-template-rows: 14%;
-  grid-gap: 20px; }
+  grid-gap: 20px;
+  margin-left: 350px; }
   .message__container > .message {
     background-color: #FFFFFF;
     border-radius: 8px; }
@@ -20,9 +25,12 @@ html {
   border-width: 0px 0px 2px 0px; }
   .message__header .message__profile {
     border-radius: 100%;
-    width: 60px;
-    height: 60px;
-    margin: 10px; }
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 15px; }
 
 .message__body {
   display: flex;
@@ -39,7 +47,8 @@ html {
 .message__going {
   color: #3399FF;
   font-size: 14px;
-  display: inline; }
+  display: inline;
+  margin-right: 15px; }
 
 .message__pending {
   color: #FF613B;
@@ -51,13 +60,20 @@ html {
   color: #5e5e5e;
   display: inline; }
 
+.message__images {
+  padding-bottom: 16px;
+  margin-right: 48px; }
+
 .message__members-going {
   border-radius: 100%;
-  height: 25px;
-  width: 25px; }
+  position: relative;
+  width: 20px;
+  height: 20px; }
 
-.message__images {
-  padding-bottom: 16px; }
+.message__amount {
+  margin-top: -39px;
+  margin-left: 127px;
+  padding-bottom: 20px; }
 
 .message__footer {
   display: flex;
@@ -75,14 +91,17 @@ html {
       color: white; }
 
 .message__name {
-  font-size: 16px; }
+  font-size: 16px;
+  margin-top: 13px; }
 
 .message__email {
-  font-size: 16px;
-  color: #626163; }
+  font-size: 12px;
+  color: #8c8b8cde;
+  margin-top: -12px; }
 
 .message__time {
   font-size: 16px;
-  color: #5e5e5e; }
+  color: #5e5e5e;
+  margin-top: -5px; }
 
 /*# sourceMappingURL=index.css.map */
