--- a/sass/index.scss
+++ b/sass/index.scss
@@ -18,13 +18,18 @@ $body-padding: 16px;
 html {
   background-color: #FAFAFA;
 }
+.message__title{
+  margin-left: 350px;
+  margin-top: 280px;
+}
 .message__container {
   background: transparent;
   display: grid;
-  width: 70%;
+  width: 69%  ;
   grid-template-columns: auto auto auto auto;
   grid-template-rows: 14%;
   grid-gap: 20px;
+  margin-left: 350px;
 
   & > .message {
     // For testing the width & size of messsage.
@@ -41,9 +46,11 @@ html {
   .message__profile {
     border-radius: 100%;
     position: relative;
-    width: 60px;
-    height: 60px;
-    margin: 10px;
+    width: 50px;
+    height: 50px;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 15px;
   }
 }
 
@@ -62,6 +69,7 @@ html {
   color: #3399FF;
   font-size: $font-body;
   display: inline;
+  margin-right: 15px;
 }
 
 .message__pending {
@@ -74,19 +82,23 @@ html {
   color: $message-color;
   display: inline;
 }
+.message__images {
+  padding-bottom: $body-padding;
+  margin-right: 48px;
+}
 
 .message__members-going {
   border-radius: 100%;
   position: relative;
   width: 20px;
   height: 20px;
-  // border: 8px solid white;
-  //position:relative;
-  //left: 45px;
 }
-.message__images {
-  padding-bottom: $body-padding;
+.message__amount{
+  margin-top: -39px;
+  margin-left: 127px;
+  padding-bottom: 20px;
 }
+
 .message__footer {
   display: flex;
   padding: 18px 0px 18px 0;
@@ -109,14 +121,18 @@ html {
 
 .message__name {
   font-size: $message-font;
+  margin-top: 13px;
 }
 
 .message__email {
-  font-size: 16px;
-  color: #626163;
+  font-size: 12px;
+  color: #8c8b8cde;
+  margin-top: -12px;
 }
 
 .message__time {
   font-size: $message-font;
   color: $message-color;
+  margin-top: -5px;
+
 }
