--- a/sass/index.scss
+++ b/sass/index.scss
@@ -85,6 +85,7 @@ html {
 .message__images {
   padding-bottom: $body-padding;
   margin-right: 48px;
+  padding-left: -10px;
 }
 
 .message__members-going {
