--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 html {
-  background-color: #FAFAFA; }
+  background-color: #FAFAFA;
+}
 
 .message__title {
   margin-left: 350px;
@@ -12,7 +13,8 @@ html {
   grid-template-columns: auto auto auto auto;
   grid-template-rows: 14%;
   grid-gap: 20px;
-  margin-left: 350px; }
+  margin-left: 350px;
+  padding-bottom: 20px;}
   .message__container > .message {
     background-color: #FFFFFF;
     border-radius: 8px; }
@@ -26,8 +28,8 @@ html {
   .message__header .message__profile {
     border-radius: 100%;
     position: relative;
-    width: 50px;
-    height: 50px;
+    width: 57px;
+    height: 57px;
     margin-top: 15px;
     margin-left: 20px;
     margin-right: 15px; }
@@ -57,7 +59,7 @@ html {
 
 .message__details {
   font-size: 14px;
-  color: #5e5e5e;
+  color: #272727;
   display: inline; }
 
 .message__images {
@@ -67,22 +69,24 @@ html {
 .message__members-going {
   border-radius: 100%;
   position: relative;
-  width: 20px;
-  height: 20px; }
+  width: 25px;
+  height: 25px;
+  margin-left: -11px;
+  border: 2px solid white; }
 
 .message__amount {
-  margin-top: -39px;
+  margin-top: -43px;
   margin-left: 127px;
   padding-bottom: 20px; }
 
 .message__footer {
   display: flex;
-  padding: 18px 0px 18px 0; }
+  padding: 15px 0px 15px 0; }
   .message__footer a {
     text-decoration: none;
     display: block;
     font-size: 16px;
-    color: #5e5e5e;
+    color: #272727;
     margin: auto; }
   .message__footer:hover {
     background-color: #2290FF;
@@ -100,8 +104,16 @@ html {
   margin-top: -12px; }
 
 .message__time {
-  font-size: 16px;
+  font-size: 15px;
   color: #5e5e5e;
   margin-top: -5px; }
+
+.message__dot {
+  color: rgba(168, 167, 168, 0.87);
+  position: absolute;
+  margin-top: -42px;
+  margin-left: 110px;
+  font-size: 12px;
+  cursor: pointer;}
 
 /*# sourceMappingURL=index.css.map */
