--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,7 +12,7 @@
 
 $message-font: 16px;
 $font-body: 14px;
-$message-color: #5e5e5e;
+$message-color: #404040;
 $body-padding: 16px;
 
 html {
@@ -25,11 +25,12 @@ html {
 .message__container {
   background: transparent;
   display: grid;
-  width: 69%  ;
+  width: 69%;
   grid-template-columns: auto auto auto auto;
   grid-template-rows: 14%;
   grid-gap: 20px;
   margin-left: 350px;
+  padding-bottom: 20px;
 
   & > .message {
     // For testing the width & size of messsage.
@@ -46,8 +47,8 @@ html {
   .message__profile {
     border-radius: 100%;
     position: relative;
-    width: 50px;
-    height: 50px;
+    width: 57px;
+    height: 57px;
     margin-top: 15px;
     margin-left: 20px;
     margin-right: 15px;
@@ -85,29 +86,30 @@ html {
 .message__images {
   padding-bottom: $body-padding;
   margin-right: 48px;
-  padding-left: -10px;
 }
 
 .message__members-going {
   border-radius: 100%;
   position: relative;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
+  margin-left: -11px;
+  border: 2px solid white;
 }
 .message__amount{
-  margin-top: -39px;
+  margin-top: -43px;
   margin-left: 127px;
   padding-bottom: 20px;
 }
 
 .message__footer {
   display: flex;
-  padding: 18px 0px 18px 0;
+  padding: 15px 0px 15px 0;
   a {
     text-decoration: none;
     display: block;
-    font-size: $message-font;
-    color: $message-color;
+    font-size: 15px;
+    color: #333333;
     margin: auto;
   }
 
@@ -132,8 +134,17 @@ html {
 }
 
 .message__time {
-  font-size: $message-font;
-  color: $message-color;
+  font-size: 15px;
+  color: #5e5e5e;
   margin-top: -5px;
 
+}
+
+.message__dot{
+  color: rgba(168, 167, 168, 0.87);
+  position: absolute;
+  margin-top: -42px;
+  margin-left: 110px;
+  font-size: 12px;
+  cursor: pointer;
 }
