--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,3 +1,6 @@
+$fontsize: 14px;
+$blue: rgb(0,162,255);
+
 /*the position of the notification-bar-section*/
 aside{
   position:fixed;
@@ -7,7 +10,8 @@ aside{
 /*the outline of the bar itself and the layer of the bar*/
 .notification_bar{
   height: 87vh;
-  width: 250px;
+  width: 17vw;
+  min-width: 250px;
   display: flex;
   background-color: white;
   border-radius: 1px;
@@ -21,12 +25,19 @@ aside{
 /*this is the style for every message block*/
 .message{
   border-bottom: 1px solid lightgrey;
-  padding:4px 20px;
+  padding:0 20px;
+  &--large{
+    border-bottom: 1px solid lightgrey;
+    padding:0 20px 40px;
+  }
 }
 
 /*this is the styling for the profile picture in a message*/
 .message_pf{
+  margin-right:15px;
+  float: left;
   border-radius: 100%;
+  width: 15%;
 }
 
 /*this is the little timestamp you see in the upperright corner in a message*/
@@ -37,6 +48,17 @@ aside{
   font-weight: bold;
 }
 
+.notification_text{
+  font-size: $fontsize;
+}
+
+.message_joining{
+}
+
+.notification_list{
+  padding-left: 0;
+}
+
 /* Customize the label (the container) */
 .container_checkbox{
   display: block;
@@ -44,7 +66,7 @@ aside{
   padding-left:35px;
   margin-bottom:12px;
   cursor: pointer;
-  font-size: 15px;
+  font-size: $fontsize;
   -webkit-user-select:none;
   -moz-user-select: none;
   user-select: none;
@@ -74,7 +96,7 @@ aside{
 
 /* When the checkbox is checked, add a blue background */
 .container_checkbox input:checked ~ .checkmark{
-  background-color: #2196F3;
+  background-color: $blue;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -105,6 +127,7 @@ aside{
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid lightgray;
+  width: 100%;
 }
 .refresh{
   background-color: white;
@@ -128,6 +151,7 @@ ul{
 .switch {
   position: relative;
   display: inline-block;
+  margin-left: 23%;
   width: 30px;
   height: 17px;
 }
@@ -164,11 +188,11 @@ ul{
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: $blue;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px $blue;
 }
 
 input:checked + .slider:before {
@@ -186,5 +210,29 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 .slider_text{
-  color: #2196F3;
+  color: $blue;
+}
+.inbox{
+  display:flex;
+  align-items: center;
+}
+.notification_bell{
+  margin: 40px;
+  height: 20px;
+  width: 20px;
+  background-color: $blue;
+  padding: 15px;
+  border-radius: 100%;
+  z-index: 1;
+}
+.inbox_text{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.inbox-title{
+  margin: 0;
+}
+.today{
+  margin: 0;
 }
