--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,17 +1,21 @@
-@mixin test-borders {
-  border-style: solid;
-  border-color: red;
-  border-width: 3px;
+%test-borders {
+  border: {
+    style: solid;
+    color: red;
+    width: 3px;
+  }
 }
 
-@mixin message-borders {
-  border-style: solid;
-  border-color: #FAFAFA;
-  border-width: 0px 0px 2px 0px;
+%message-borders {
+  border: {
+    style: solid;
+    color: #FAFAFA;
+    width: 0px 0px 2px 0px;
+  }
 }
 
 $message-font: 16px;
-$font-body: 14px;
+$body-font: 14px;
 $message-color: #404040;
 $body-padding: 16px;
 
@@ -19,39 +23,43 @@ html {
   background-color: #FAFAFA;
 }
 .message__title{
-  margin-left: 350px;
-  margin-top: 280px;
+  margin: {
+    left: 350px;
+    top: 280px;
+  }
 }
 .message__container {
   background: transparent;
   display: grid;
+  grid: {
+    template-columns: auto auto auto auto;
+    template-rows: 14%;
+    gap: 20px;
+  }
   width: 69%;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: 14%;
-  grid-gap: 20px;
   margin-left: 350px;
   padding-bottom: 20px;
 
   & > .message {
-    // For testing the width & size of messsage.
     background-color: #FFFFFF;
     border-radius: 8px;
   }
 }
-
 .message__header {
   display: flex;
   align-items: flex-start;
-  @include message-borders;
+  @extend %message-borders;
 
   .message__profile {
     border-radius: 100%;
     position: relative;
     width: 57px;
     height: 57px;
-    margin-top: 15px;
-    margin-left: 20px;
-    margin-right: 15px;
+    margin: {
+      top: 15px;
+      left: 20px;
+      right: 15px;
+    }
   }
 }
 
@@ -60,7 +68,7 @@ html {
   flex-direction: column;
   align-items: center;
   padding-top: 14px;
-  @include message-borders;
+  @extend %message-borders;
 }
 
 .message__status {
@@ -68,18 +76,18 @@ html {
 }
 .message__going {
   color: #3399FF;
-  font-size: $font-body;
+  font-size: $body-font;
   display: inline;
   margin-right: 15px;
 }
 
 .message__pending {
   color: #FF613B;
-  font-size: $font-body;
+  font-size: $body-font;
   display: inline;
 }
 .message__details {
-  font-size: $font-body;
+  font-size: $body-font;
   color: $message-color;
   display: inline;
 }
@@ -96,9 +104,11 @@ html {
   margin-left: -11px;
   border: 2px solid white;
 }
-.message__amount{
-  margin-top: -43px;
-  margin-left: 127px;
+.message__amount {
+  margin: {
+    top: -43px;
+    left: 127px;
+  }
   padding-bottom: 20px;
 }
 
@@ -143,8 +153,10 @@ html {
 .message__dot{
   color: rgba(168, 167, 168, 0.87);
   position: absolute;
-  margin-top: -42px;
-  margin-left: 110px;
+  margin: {
+    top: -42px;
+    left: 110px;
+  }
   font-size: 12px;
   cursor: pointer;
 }
