--- a/sass/index.scss
+++ b/sass/index.scss
@@ -19,8 +19,7 @@ $fontsize: 14px;
 		justify-content: flex-start;
 		flex-flow: row;
 		align-items: center;
-		box-shadow: #656565 9px;
-		height: 10vh;
+		height: 9vh;
 		width: 100vw;
 
 		.page__logo{
@@ -102,7 +101,7 @@ $fontsize: 14px;
 		}
 
 		.header__profile{
-			margin-left: 190px;
+			margin-left: 85px;
 			display: flex;
 			align-items: center;
 			flex-wrap: nowrap;
@@ -259,9 +258,10 @@ $fontsize: 14px;
 	}
 
 	.top__main-title{
-		margin-top: 50px;
+		margin-top: 30px;
 		margin-left: 50px;
 		font-family: $text-font;
+		font-weight:normal;
 	}
 
 	.top__main {
@@ -507,12 +507,14 @@ aside{
   }
 }
 
+
 /*this is the styling for the profile picture in a notification*/
-.notification_pf{
+.notification_pp{
   margin-right:15px;
   float: left;
   border-radius: 100%;
-  width: 15%;
+  width: 35px;
+	height:35px;
 }
 
 /*this is the little timestamp you see in the upperright corner in a notification*/
@@ -521,13 +523,12 @@ aside{
   font-size: 10px;
   color: #979797;
   font-weight: bold;
+	margin-bottom:5px;
 }
 
 .notification_text{
+	margin-top:0;
   font-size: $fontsize;
-}
-
-.message_joining{
 }
 
 .notification_list{
@@ -556,12 +557,14 @@ aside{
 
 /* Create a custom checkbox */
 .checkmark {
+	border: 2px solid lightgray;
+	border-radius:20%;
   position:absolute;
   top:0;
   left: 0;
   height: 15px;
   width: 15px;
-  background-color: #eee;
+  background-color: white;
 }
 
 /* On mouse-over, add a grey background color */
@@ -589,7 +592,7 @@ aside{
 /* Style the checkmark/indicator */
 .container_checkbox .checkmark:after{
   left: 3px;
-  top: 2px;
+  top: -10px;
   width: 5px;
   height: 10px;
   border: solid white;
@@ -603,6 +606,7 @@ aside{
   flex-direction: row;
   border-bottom: 1px solid lightgray;
   width: 100%;
+	height: 40px;
 }
 .refresh{
   background-color: white;
@@ -611,6 +615,7 @@ aside{
   padding-top:10px;
   padding-bottom:10px;
   outline: none;
+
 }
 .close{
   background-color: white;
@@ -628,6 +633,7 @@ ul{
   position: relative;
   display: inline-block;
   margin-left: 23%;
+	margin-bottom: 10%;
   width: 30px;
   height: 17px;
 }
@@ -659,8 +665,9 @@ ul{
   transition: .4s;
 }
 .slider_text{
-  padding-left: 40px;
+  padding-left: 60px;
   display: inline;
+	font-size:13px;
 }
 
 input:checked + .slider {
@@ -687,6 +694,11 @@ input:checked + .slider:before {
 }
 .slider_text{
   color: $blue;
+}
+.message_joining{
+	color:$blue;
+	font-size:15px;
+	margin-top:0;
 }
 .inbox{
   display:flex;
