--- a/sass/index.scss
+++ b/sass/index.scss
@@ -525,6 +525,10 @@ aside{
   font-weight: bold;
 	margin-bottom:5px;
 }
+.dot{
+	width:5px;
+	margin-right: 10px;
+}
 
 .notification_text{
 	margin-top:0;
