--- a/css/index.css
+++ b/css/index.css
@@ -112,6 +112,12 @@
     color: #2aa42a;
     margin-top: -0.1%;
     height: 35px; }
+  .page__body #grid-target {
+    background-color: #e6f2ff;
+    border-left: 1.5px solid #00a2ff;
+    color: #00a2ff; }
+  .page__body #grid-target--icon {
+    color: #00a2ff; }
   .page__body .grid-admin {
     padding-bottom: 35px; }
   .page__body .grid-admin--png {
@@ -188,7 +194,7 @@
     align-items: center;
     background-color: white;
     margin-left: 40px;
-    width: 90%;
+    width: 65vw;
     height: 120px; }
   .page__body .top__main > .top__flexbox {
     height: 120px;
@@ -212,11 +218,14 @@
     margin: 25px 0px 0px 35px; }
   .page__body .flexbox__titles {
     text-align: center;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    margin-bottom: 0;
+    margin-top: 40px; }
   .page__body .flexbox__paragraph {
     color: grey;
     text-align: center;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    margin-top: 5px; }
   .page__body .highlighted {
     font-size: 25px;
     font-weight: bold;
@@ -243,7 +252,7 @@ html {
   grid-template-rows: 14%;
   grid-gap: 20px;
   width: 95%;
-  margin-left: 50px;
+  margin-left: 40px;
   padding-bottom: 20px; }
   .message__container > .message {
     background-color: #FFFFFF;
@@ -467,7 +476,8 @@ aside {
   border: none;
   padding-top: 10px;
   padding-bottom: 10px;
-  outline: none; }
+  outline: none;
+  cursor: pointer; }
 
 .close {
   background-color: white;
@@ -476,7 +486,8 @@ aside {
   border-top: none;
   border-bottom: none;
   border-right: none;
-  outline: none; }
+  outline: none;
+  cursor: pointer; }
 
 ul {
   list-style-type: none; }
